byte-code-compiler/test_files/typing/bad/testfile-arrow-4.psc

struct S { int_32 a; };
int_32 foo() {}
int_32 main() { (foo())->a; }

